fix scrollbar

--- a/src/components/Pages/Pages.css
+++ b/src/components/Pages/Pages.css
@@ -40,15 +40,16 @@
 }
 
 ::-webkit-scrollbar {
-  width: 8px;
+  width: 6px;
+  height: 6px;
 }
 
 ::-webkit-scrollbar-track {
-  background-color: black;
+  background-color: #333;
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: #b2b2b2;
+  background-color: #c5dea1;
 }
 
 ::-webkit-scrollbar-thumb:hover {
